# robotics

install/differential_drive_robot/share/differential_drive_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/differential_drive_robot/share/differential_drive_robot/launch/: display.launch.py
install/differential_drive_robot/share/differential_drive_robot/rviz/: display.rviz
install/differential_drive_robot/share/differential_drive_robot/urdf/: robot.urdf.xacro
install/differential_drive_robot/share/differential_drive_robot/worlds/: empty_world.world
install/mobile_imu/lib/mobile_imu/: mobile_imu_filter  position_estimator  sensor_receiver
install/mobile_imu/share/mobile_imu/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_estimation/lib/robot_estimation/: complementary_filter  imu_filter  motion_controller  motion_odometry  wheel_rpm_publisher
install/robot_estimation/share/robot_estimation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/differential_drive_robot/: setup.py
src/differential_drive_robot/launch/: gazebo.launch.py
src/differential_drive_robot/rviz/: gazebo.rviz
src/mobile_imu/: package.xml  setup.cfg  setup.py
src/mobile_imu/launch/: mobile_imu.launch.py
src/mobile_imu/mobile_imu/: mobile_imu_filter.py  position_estimator.py
src/robot_estimation/: setup.py
src/robot_estimation/launch/: estimator.launch.py
src/robot_estimation/robot_estimation/motion_model/: motion_controller.py
